www/css/cintient.css
/* ... */
.smoothHoverSmall
{
/* for small items, a quicker transition plays nicer with your eyes */
          transition: all 0.08s ease-in-out;
     -moz-transition: all 0.08s ease-in-out;
  -webkit-transition: all 0.08s ease-in-out;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
	      border-radius: 4px;
}

.smoothHover:hover, .smoothHoverSmall:hover
{
  background-color: #eee;
  /*background-color: #F8F8F8;*/
  cursor: pointer;
}

footer
{
  margin-top: 0px;
  padding-top: 10px;
}
footer p, footer #installationStats
{
  /*letter-spacing: .20em;*/
  font-family: Syncopate, "Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif;
  text-align: center;
  clear: both;
  font-size: 7pt;
  line-height: 1.2em;
  color: #555;
  text-shadow: white 1px 1px 1px;
}

.page-header
{
  clear: both;
  float: left;
  width: 100%;
}
.page-header h1
{
  float: left;
}
.page-header h1 small
{
  /*color: gray;*/
  text-shadow: white 1px 1px 1px;
}
.page-header .label
{
  text-shadow: none;
}

#subSectionInclude
{
  clear: right;
  float: right;
  margin-top: 16px;
  font-size: 1em;
  text-shadow: white 1px 1px 1px;
  color: gray;
}
#subSectionInclude .label
{
  margin-right: 2px;
}

.dropdownArrow
{
  /* Copied from Bootstrap's own ::after */
  width: 0;
  height: 0;
  display: inline-block;
  text-indent: -99999px;
  vertical-align: top;
  margin-top: 8px;
  margin-left: 4px;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid white;
  filter: alpha(opacity=50);
  -khtml-opacity: 0.5;
  -moz-opacity: 0.5;
  opacity: 0.5;
  content: "&darr;";
}

.dropdownArrowDark
{
  width: 0;
  height: 0;
  display: inline-block;
  text-indent: -99999px;
  vertical-align: top;
  margin-top: 8px;
  margin-left: 4px;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid gray;
  -khtml-opacity: 0.7;
  -moz-opacity: 0.7;
  opacity: 0.7;
  content: "&darr;";
}

/* Bootstrap 1.4.0 style tables  */
table
{
  border: none;
}
table th + th, table td + td
{
  border-left: none;
}

/* ========================= */

.closingX
{
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  width: 10px;
  height: 10px;
  color: #fff;
  background-color: rgb(170,170,170);
  display: block;
top: 0px;
right: 0px;
height: 0;
width: 10px;
padding: 10px 0 0 0;
overflow: hidden;
background: black none;
border: 0.04545454545455px solid white;
-moz-border-radius: 18px;
-webkit-border-radius: 18px;
border-radius: 10px;
color: white;
cursor: pointer;
-moz-user-select: none;
-webkit-user-select: none;
user-select: none;
}

.closingX::before
{
  content: "×D7";
  width: 9px;
  font-size: 10pt;
  display: block;
  line-height: 1px;
}

.fake-lightbox {
  width: 200px;
  height: 40px;
  padding: 15px;
  position: relative; /*Important for the position of the close box*/
  margin: 25px auto;
  box-shadow: 0 2px 12px #333;
  -ms-box-shadow: 0 2px 12px #333;
  -moz-box-shadow: 0 2px 12px #333;
  -webkit-box-shadow: 0 2px 12px #333;
  border-radius: 8px;
  -ms-border-radius: 8px;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border: 1px solid #666;
}
/* ========================= */

.modal-backdrop, .modal-backdrop.fade.in
{
  /* An override for the default opacity of the Bootstrap modals */
  filter: alpha(opacity=40);
  -khtml-opacity: 0.4;
  -moz-opacity: 0.4;
  opacity: 0.4;
}

/* @end */





/* @group Dashboard */

#dashboard ul
{
  margin-left: 0px;
}

/* The project avatar is col1 and the status and project name are col2 */
#dashboard .col1, .col2
{
  float: left;
  padding-right: 10px;
  margin-bottom: 4px; /* Space between the project avatar and the line after */
}

/* The project list */
#dashboard li.project
{
  clear: both;
  margin-bottom: 1px; /* Nice small white space between project highlights */
  padding: 15px 10px 0px 10px; /* to beautify the on-hover highlight */
  margin-right: 7px; /* to beautify the on-hover highlight */
          transition: all 0.15s ease-in-out;
     -moz-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  /*min-height: 111px;*/ /* Try to give all projects an even height */
  height: 111px;
  padding-bottom: 10px;
  -webkit-border-radius: 4px;
	 -moz-border-radius: 4px;
    	  border-radius: 4px;
}

#dashboard li.project a
{
  color: inherit;
}

#dashboard li.project:not(:last-child)
{
  border-bottom: 1px solid #EEE; /* Line between each project */
}

#dashboard ul#projectList
{
  margin-bottom: 0px;
  padding-right: 4px;
}

/* The items inside a project, on the project list */
#dashboard ul#projectList > li > ul > li
{
  clear: both;
}

#dashboard ul#projectList > li > ul > li.sparkline
{
  /* To properly empty space above the sparkline */
  margin-top: 6px;
  margin-left: 1px;
}

#dashboard .sparklineBuilds
{
  /* Small trick to not show the 1, 1, 1, 1, 0, 0, 1 numbers that might
     be there in a fraction of a section before the sparkline.js can
     turn them into a canvas image. This way we don't have to mess around
     with visibility or display - it seems sparkline.js doesn't play well
     with that. */
  color: transparent;
  float: left;
}

#dashboard .build
{
  height: 20px;
  padding-top: 3px;
}

#dashboard .build, #dashboard .build + .loading
{
  float: right;
  margin-top: 0px;
  display: none;
}

#dashboard .build + .loading
{
  margin-top: 3px;
  margin-right: 15px;
}

#dashboard .projectRevision
{
  font-size: 12pt; /* slightly increase the revision line */
}

#dashboard .builtOn
{
  font-size: .86em;
  margin-top: 3px;
}

#dashboard h3.projectTitle
{
  float: none;
  margin-top: -4px;
  margin-bottom: -6px;
  clear: right;
}

#dashboard .chart
{
  margin-bottom: 20px;
  margin-left: 10px;
  margin-right: 10px;
}

#dashboard #log table
{
  float: left;
}

/* @end */

/* @group Project build history */

#projectBuildHistory .projectAvatar40x40
{
  float: left;
  margin-right: 14px;
}
/* ... */

